# dhs-servo-robotic-arm

./: .gitignore  README.md  pyproject.toml  舵机机械臂 2 号 v29.3mf
arm/: arm.py  bus.py  protocol.py  servo.py
config/: arm_config.yaml
deploy/: arm-web.service  install_service.sh
docs/: 硬件介绍.md
tests/: test_constraints.py  test_prerequisites.py  test_protocol.py  test_rule_integration.py  test_state.py  test_zone_limits.py
tools/: calibrate.py  calibrate_home.py  explore_motion.py  jog.py  reset_ids.py  scan.py  set_id.py  state_demo.py
webapp/: __init__.py  server.py  state.py
webapp/static/: index.html
